--- a/TODO_18/app/src/main/res/values-dz-rBT/strings.xml
+++ b/TODO_18/app/src/main/res/values-dz-rBT/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">TODO_18</string>
     <string name="title">Title</string>
