--- a/TODO_18/app/src/main/res/values-en-rUS/strings.xml
+++ b/TODO_18/app/src/main/res/values-en-rUS/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">TODO_18</string>
     <string name="title">Title</string>
@@ -11,7 +12,7 @@
         <item>Cycling</item>
         <item>Golf</item>
         <item>Running</item>
-        <item>Football</item>
+        <item>Soccer</item>
         <item>Swimming</item>
         <item>Table Tennis</item>
         <item>Tennis</item>
@@ -25,7 +26,7 @@
         <item>Here is some Cycling news!</item>
         <item>Here is some Golf news!</item>
         <item>Here is some Running news!</item>
-        <item>Here is some Football news!</item>
+        <item>Here is some Soccer news!</item>
         <item>Here is some Swimming news!</item>
         <item>Here is some Table Tennis news!</item>
         <item>Here is some Tennis news!</item>
